@@ -2,6 +2,7 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745, STR #942, STR #931)
+	- Fixed some plastic drawing artifacts (STR #906)
 	- Fl_Help_View now draws the box outside the scrollbars,
 	  like the other scrollable widgets (STR #871)
 	- The fltk-config script now handles invocation via a
